--- a/bims/templates/metadata_base.html
+++ b/bims/templates/metadata_base.html
@@ -108,7 +108,7 @@
 {% endblock head %}
 
 
-{% block title %} {{ block.super }} {% endblock %}
+{% block site_title %} {{ block.super }} {% endblock %}
 {% block header %}
     <link href="{% static "css/navbar.css" %}" rel="stylesheet">
     <link href="{% static "css/navbar_geonode.css" %}" rel="stylesheet">
