--- a/bims/templates/base.html
+++ b/bims/templates/base.html
@@ -13,8 +13,7 @@
     <meta Http-Equiv="Expires" Content="0">
     <meta Http-Equiv="Pragma-directive: no-cache">
     <meta Http-Equiv="Cache-directive: no-cache">
-
-    <title>{% block title %}{{ SITE_NAME }}{% endblock %}</title>
+    <title>{% block site_title %}{{ SITE_NAME }}{% endblock %}</title>
     {% block head %}
       {% if DEBUG_STATIC %}
           <link href="{% static "lib/css/jquery.dataTables.css" %}?v={{ VERSION }}" rel="stylesheet" />
