--- a/bims/templates/base/_resourcebase_snippet.html
+++ b/bims/templates/base/_resourcebase_snippet.html
@@ -9,12 +9,12 @@
   <article ng-repeat="item in results" resource_id="{{ item.id }}" ng-cloak class="ng-cloak">
     <div class="col-lg-12 item-container">
       <div class="col-lg-12 profile-avatar">
-        <div class="col-lg-4 item-thumb">
+        <div ng-if="item.store_type != 'dataset'" class="col-lg-4 item-thumb">
           <a href="{{ item.detail_url }}">
             <img ng-src="{{ item.thumbnail_url }}" />
           </a>
         </div>
-        <div class="col-lg-8 item-details">
+        <div class="item-details" ng-class="(item.store_type == 'dataset')?'col-lg-12':'col-lg-8'">
           <div class="row">
             <div class="col-xs-10">
               <p class="item-meta">
