Download csv via email

--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -60,6 +60,18 @@
   </div>
 </div>
 
+<div class="modal fade" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="alertModalLabel" aria-hidden="true" style="z-index: 99999">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body" id="alertModalBody">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% block navigation %}
     <!-- Navigation -->
     {% include 'navigation_bar.html' %}
