Add site visit form

--- a/bims/templates/documents/document_detail.html
+++ b/bims/templates/documents/document_detail.html
@@ -1,7 +1,7 @@
 {% extends "documents/document_base.html" %}
 {% load i18n %}
 {% load dialogos_tags %}
-{% load agon_ratings_tags %}
+{% load pinax_ratings_tags %}
 {% load bootstrap_tags %}
 {% load base_tags %}
 {% load guardian_tags %}
@@ -151,7 +151,7 @@
                 <div class="col-sm-3">
                   <i class="fa fa-photo fa-3x"></i>
                   <h4>{% trans "Thumbnail" %}</h4>
-                  <a class="btn btn-default btn-block btn-xs" href="{% url "document_thumb_upload" resource.id %}" id="set_thumbnail">{% trans "Set" %}</a>
+                    <a class="btn btn-default btn-block btn-xs" href="{% url "thumbnail_upload" resource.resourcebase_ptr.id %}">{% trans "Upload" %}</a>
                 </div>
                 {% endif %}
                 {% if "change_resourcebase" in perms_list or "delete_resourcebase" in perms_list %}
