--- a/bims/templates/layers/layer_metadata_upload.html
+++ b/bims/templates/layers/layer_metadata_upload.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load staticfiles %}
 {% load dialogos_tags %}
-{% load agon_ratings_tags %}
+{% load pinax_ratings_tags %}
 {% load bootstrap_tags %}
 {% load pagination_tags %}
 {% load base_tags %}
