Site visit list

--- a/bims/templates/site_visit/site_visit_update.html
+++ b/bims/templates/site_visit/site_visit_update.html
@@ -150,7 +150,7 @@
                         Owner, if you are the data capturer and not the
                         Owner</small>
                     <div class="invalid-feedback">
-                        Please provide a owner
+                        Please provide an owner
                     </div>
                     <input type="hidden" name="owner_id" id="owner_id"
                            value="{{ owner.id }}">
