--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -9,6 +9,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/sass_dashboard.css" %}" rel="stylesheet">
+    <link href="{% static "css/dashboard_buttons.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/openlayers-4.6.4/ol.css" %}"
           rel="stylesheet">
     <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
